# sandbox

./: .gitmodules  markdown.md
.circleci/: config.yml
algorithm/greedy/: interval_scheduling.py  schedule.json
algorithm/huffman/: huffman.py
c/: pointer.c
cpp/calc/: CMakeLists.txt  Makefile
cpp/greeting/: CMakeLists.txt  Makefile
cpp/greeting/include/: greeting.h
cpp/greeting/src/: hello.cpp  hi.cpp
cpp/greeting/src/greeting/: CMakeLists.txt  hello.cpp  hi.cpp
cpp/greeting/test/: gtest_example.cpp
dictionary/: dictionary.py  init_dict.py
diff/: test.patch
diff/clone/: hello.txt
diff/origin/: greeting.py
docker/: curl.yml  note.md
docker/alpine-ikev2/: exec.sh
docker/drone-compose/: .gitignore  docker-compose.yml
eso/church/: ChangeLog.md  package.yaml
go/: avatar.go  generate_img.go
go/avatar/: colors.go  mozaic.go
go/basic_tips/: tick.go
go/gin/: Dockerfile  README.md  docker-compose.yml  main.go
go/jwt/: main.go
go/testify/: main.go  main_test.go
haskell/: fizzbuzz.hs  typing.hs
haskell/church/: .gitignore
haskell/h99/: LICENSE  (+3 more)
ical/: rrule.py
javascript/: event.html  inheritance.html  promise.html  scope.html
ksnctf/: G00913.py  login.c  login.py  onion.py  square_cipher.py
python/: chimera.py  classmethod_overwriting.py  clicker.py  combinator.py  memoize.py  mydict.py  property.py  slack.py  wrapper_overwriting.py  ws.py  ydn.py
ruby/: Gemfile  Rakefile  app.rb  config.ru
shellscript/: catcher_in_the_pipe.sh  ghost.sh  menu.sh  reload_shell.sh
terraform/: .gitignore
websock/: client.html  server.py
(+197 files in other folders)
